Issue #27443: __length_hint__() of bytearray itearator no longer return negative integer for resized bytearray.